--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.41",
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.7",
+    "apollo-client": "^2.6.8",
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
-    "gatsby-plugin-manifest": "^2.2.48",
+    "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-react-helmet": "^3.1.24",
-    "gatsby-plugin-sharp": "^2.4.13",
+    "gatsby-plugin-sharp": "^2.5.1",
     "gatsby-source-filesystem": "^2.1.56",
-    "gatsby-transformer-sharp": "^2.3.19",
+    "gatsby-source-graphql": "^2.1.35",
+    "gatsby-theme-apollo": "^3.0.2",
+    "gatsby-transformer-sharp": "^2.4.1",
+    "graphql-tag": "^2.10.3",
+    "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^6.0.0-beta.2"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
