--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@apollo/react-hooks": "^3.1.3",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.5.1",
+    "gatsby-plugin-styled-components": "^3.2.0",
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-source-graphql": "^2.1.35",
     "gatsby-theme-apollo": "^3.0.2",
@@ -24,7 +26,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0-beta.2"
+    "react-helmet": "^6.0.0-beta.2",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
