--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0-beta.2",
+    "react-icons": "^3.9.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
