--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-offline": "^3.0.41",
+    "gatsby-plugin-portal": "^1.0.7",
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.5.1",
     "gatsby-plugin-styled-components": "^3.2.0",
@@ -23,6 +24,7 @@
     "gatsby-transformer-sharp": "^2.4.1",
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
