--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "apollo-client": "^2.6.8",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.45",
+    "gatsby-cli": "^2.11.1",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.3.1",
+    "gatsby-plugin-modal-routing": "^1.1.0",
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-portal": "^1.0.7",
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.5.1",
     "gatsby-plugin-styled-components": "^3.2.0",
     "gatsby-source-filesystem": "^2.1.56",
-    "gatsby-source-graphql": "^2.1.35",
     "gatsby-theme-apollo": "^3.0.2",
     "gatsby-transformer-sharp": "^2.4.1",
     "graphql-tag": "^2.10.3",
