--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0-beta.2",
     "react-icons": "^3.9.0",
+    "react-transition-group": "^4.3.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
