--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "babel-plugin-styled-components": "^1.10.7",
+    "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "gatsby": "^2.19.45",
     "gatsby-cli": "^2.11.1",
     "gatsby-image": "^2.2.44",
@@ -18,6 +20,7 @@
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-portal": "^1.0.7",
     "gatsby-plugin-react-helmet": "^3.1.24",
+    "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.5.1",
     "gatsby-plugin-styled-components": "^3.2.0",
     "gatsby-source-filesystem": "^2.1.56",
@@ -26,12 +29,15 @@
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0-beta.2",
     "react-icons": "^3.9.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-transition-group": "^4.3.0",
+    "reactstrap": "^8.4.1",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
