--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.41",
     "@apollo/react-hooks": "^3.1.3",
+    "apexcharts": "^3.18.1",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "babel-plugin-styled-components": "^1.10.7",
@@ -32,6 +33,7 @@
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0-beta.2",
     "react-icons": "^3.9.0",
