--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.41",
     "@apollo/react-hooks": "^3.1.3",
+    "@fullcalendar/bootstrap": "^4.4.0",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
+    "@fullcalendar/list": "^4.4.0",
+    "@fullcalendar/react": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.4.0",
     "apexcharts": "^3.18.1",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "core-js": "^3.6.5",
     "gatsby": "^2.19.45",
-    "gatsby-cli": "^2.11.1",
+    "gatsby-cli": "^2.11.13",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-modal-routing": "^1.1.0",
