--- a/package.json
+++ b/package.json
@@ -25,13 +25,10 @@
     "gatsby-cli": "^2.11.13",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.3.1",
-    "gatsby-plugin-modal-routing": "^1.1.0",
     "gatsby-plugin-offline": "^3.0.41",
-    "gatsby-plugin-portal": "^1.0.7",
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.5.1",
-    "gatsby-plugin-styled-components": "^3.2.0",
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-theme-apollo": "^3.0.2",
     "gatsby-transformer-sharp": "^2.4.1",
@@ -45,10 +42,10 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0-beta.2",
     "react-icons": "^3.9.0",
+    "react-loadable": "^5.5.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-transition-group": "^4.3.0",
-    "reactstrap": "^8.4.1",
-    "styled-components": "^5.0.1"
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
